--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <section id="home" class="content">
     <div class="half-section">
      <div class="avatar-container">
-      <img src="./assets/avatar.png" alt="">
+      <img src="./assets/20240221_194300.jpg" alt="">
       <h3>"Yo, disfrutando de mi café..."</h3>
      </div>
     </div>
