--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="half-section">
      <div class="avatar-container">
       <img src="./assets/20240221_194300.jpg" alt="">
-      <h3>"Yo, disfrutando de mi café..."</h3>
+      <h3>"Yo, disfrutando de la buena playa..."</h3>
      </div>
     </div>
     <div class="half-section text-section">
@@ -56,7 +56,7 @@
   <section id="about" class="content">
     <aside class="half-section text-section">
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem sint porro reiciendis debitis et harum animi rem fugit eaque. Officia maxime id ipsum culpa temporibus dolore saepe quos quasi debitis.
+        Objetivos claros para empezar a trabajar y generar dinero consectetur adipisicing elit. Autem sint porro reiciendis debitis et harum animi rem fugit eaque. Officia maxime id ipsum culpa temporibus dolore saepe quos quasi debitis.
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente quisquam rem quam, corporis itaque dolor deserunt libero doloremque quibusdam repellat quidem doloribus quia eos officia placeat, quasi, odit repellendus ipsa.
       </p>
       <p>
@@ -75,7 +75,7 @@
 
   <section id="projects" class="content">
     <aside class="half-section title-section">
-      <h2>Experiencia en el campo</h2>
+      <h2>Experiencia en el campo de empresas de JUJUY</h2>
     </aside>
     <aside class="half-section text-section">
         <ul class="project-list">
