--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente quisquam rem quam, corporis itaque dolor deserunt libero doloremque quibusdam repellat quidem doloribus quia eos officia placeat, quasi, odit repellendus ipsa.
       </p>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus dolore esse a officiis autem sint harum quos rerum neque aut, totam itaque iure perferendis vitae reiciendis praesentium corporis saepe consectetur.
+        es importante seguir estuadiando para poder progresar onsectetur adipisicing elit. Repellendus dolore esse a officiis autem sint harum quos rerum neque aut, totam itaque iure perferendis vitae reiciendis praesentium corporis saepe consectetur.
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati veniam, deleniti rem, neque ipsum eos ullam distinctio, atque harum perferendis itaque ipsam labore voluptatibus. Maiores provident perspiciatis sunt mollitia impedit.
       </p>
       <p>
