--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div class="introduction">
         <h1 class="title">Hola!, <br> Soy Jorge Tolaba Nicolas </h1>
         <ul class="socials">
-          <li><a class="socials-icon" href=""><i class="bi bi-github"></i></a></li>
+          <li><a class="socials-icon" href="https://www.youtube.com/watch?v=D26SUOcxFGU&list=PLwcGiWYzXkdVbCIp_q3KGYHFvDpOfCZWO&index=4"><i class="bi bi-github"></i></a></li>
           <li><a class="socials-icon" href=""><i class="bi bi-linkedin"></i></a></li>
           <li><a class="socials-icon" href=""><i class="bi bi-twitter"></i></a></li>
           <li><a class="socials-icon" href=""><i class="bi bi-facebook"></i></a></li>
