volviendo con los commits

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <a href="#projects">Experiencia</a>
         </li>
         <li class="menu-item">
-          <a href="#contact">Contacto</a>
+          <a href="#contact">Contacto telefonico</a>
         </li>
       </ul>
     </nav>
@@ -121,7 +121,7 @@
         <input class="btn-send-message" type="submit" value="Enviar">
     </aside>
     <aside class="half-section title-section">
-      <h2>Envíame un mensaje de texto y charlemos!</h2>
+      <h2>Envíame un mensaje de y charlemos!</h2>
     </aside>
   </section>
 
